--- a/package.json
+++ b/package.json
@@ -6,15 +6,37 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@walletconnect/web3-provider": "^1.7.7",
+    "@web3auth/web3auth": "^0.9.0",
+    "axios": "^0.26.1",
+    "chart.js": "^2.9.4",
+    "framer-motion": "^6.3.0",
+    "magic-sdk": "^8.1.0",
+    "moralis": "^1.5.9",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-data-table-component": "^7.4.7",
+    "react-dom": "18.0.0",
+    "react-icons": "^4.3.1",
+    "react-is": "^18.0.0",
+    "react-moralis": "^1.3.5",
+    "react-typical": "^0.1.3",
+    "styled-components": "^5.3.5",
+    "sweetalert2": "^11.4.8",
+    "web3": "^1.7.3"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.4",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint": "8.12.0",
-    "eslint-config-next": "12.1.4"
+    "eslint-config-next": "12.1.4",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23"
   }
 }
