--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p $PORT",
     "lint": "next lint",
-    "export": "next export"
+    "export": "next export",
+    "heroku-postbuild": "npm run build"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -38,5 +39,9 @@
     "eslint-config-next": "12.1.4",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23"
+  },
+  "engines": {
+    "node": "14.17.6",
+    "npm": "8.7.0"
   }
 }
