--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,10 @@
 [build]
   command = "yarn run build"
   functions = "netlify/functions"
-  publish = "	"
+  publish = ".next"
+  
+[[plugins]]
+package = "@netlify/plugin-nextjs"
 
   ## Uncomment to use this redirect for Single Page Applications like create-react-app.
   ## Not needed for static site generators.
